2007-11-15  Diego Escalante Urrelo  <diegoe@gnome.org>

	* libgsm/glibgsmtest.c: Add a missing include for locale.h, this was
	causing a FTBFS (Closes #496631)

2007-11-15  Bastien Nocera  <hadess@hadess.net>

	* telepathy/connection-manager.c:
	(phoney_connection_manager_get_phoney_connection),
	(_phoney_connection_manager_new_connection):
	Fix stupidness in _get_phoney_connection, error out when
	asked to create a connection for which we already handle the
	bluetooth address

2007-11-14  Bastien Nocera  <hadess@hadess.net>

	* src/gnome-phone-manager.desktop.in: Remove unneeded Encoding key
	(Closes: #496851)

2007-11-14  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_queue_message),
	(phonemgr_listener_poll): Add http links in the dummy messages

2007-11-14  Bastien Nocera  <hadess@hadess.net>

	* telepathy/connection-manager.c:
	(connection_shutdown_finished_cb):
	Emit DISCONNECTED when we've disconnected by hand
	* telepathy/connection.c: (_phoney_connection_shut_down):
	Add some debug here

2007-11-14  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_emit_message),
	(phonemgr_listener_connect), (phonemgr_listener_call_status),
	(phonemgr_listener_thread): exit super-fast when asked to during
	the initial setup

	* libgsm/phonemgr-utils.c: (phonemgr_utils_driver_for_model),
	(phonemgr_utils_driver_parse_start_tag),
	(phonemgr_utils_start_parse), (phonemgr_utils_init_hash_tables),
	(phonemgr_utils_tell_driver): Fix disconnecting and reconnecting
	to a phone with a driver, only add the phone's driver to the list of
	known devices when it's a known device

2007-11-14  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/Makefile.am: Fix BUILT_SOURCES being overwritten by MARSHALFILES
	and thus not generating phone-manager-interface.h (Closes #496632).

2007-11-14  Bastien Nocera  <hadess@hadess.net>

	* telepathy/Makefile.am: Add sms.profile to the dist

============ Version 0.40
