@@ -1,3 +1,9 @@
+2007-11-16  Bastien Nocera  <hadess@hadess.net>
+
+	reviewed by: <delete if not using a buddy>
+
+	* POTFILES.in:
+
 2007-11-09  Bastien Nocera  <hadess@hadess.net>
 
 	* pl.po: Updated Polish translation from Pawel Kot
